--- a/src/main/resources/templates/be/product/create.html
+++ b/src/main/resources/templates/be/product/create.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" thymeleaf >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Product List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="container">
+   <h1>Add Product</h1>
+    <form method ="post" th:object="${product}">
+        <div class="mb-3">
+        <label for="textName" class="form-label">Product Name</label>
+        <input type="text" th:field="*{name}" class="form-control" id="textName" placeholder="name@example.com">
+    </div>
+        <div class="mb-3">
+            <label for="textPrice" class="form-label">Product Price</label>
+            <input type="text" class="form-control" th:field="*{price}" id="textPrice"/>
+        </div>
+        <div class="mb-3">
+            <label for="textCategory" class="form-label">Product's Category</label>
+            <input type="text" class="form-control" th:field="*{category}" id="textCategory"/>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-info">Submit</button>
 
+        </div>
+
+    </form>
+</div>
 </body>
 </html>
