--- a/src/main/resources/templates/be/product/list.html
+++ b/src/main/resources/templates/be/product/list.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Product List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Category</th>
-    </tr>
-    </thead>
+<div class="container">
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Category</th>
+            <th scope="col">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr scope="row" th:each="product: ${products}">
+            <td>
+                <div th:text="${product.getId()}"></div>
+            </td>
+            <td>
+                <div th:text="${product.getName()}"></div>
+            </td>
+            <td>
+                <div th:text="${product.getPrice()}"></div>
+            </td>
+            <td>
+                <div th:text="${product.getCategory()}"></div>
+            </td>
+            <td>
+                <a th:href="@{'/admin/product/update/' + ${product.getId()}}" class="btn btn-primary">Edit</a>
+                <a th:href="@{'/admin/product/delete/' + ${product.getId()}}" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
 
-    <tbody>
-    <tr th:each="product: ${products}">
-        <td>
-            <!--/*@thymesVar id="product" type=""*/-->
-            <div th:text="${product.getId()}"></div>
-        </td>
-        <td>
-            <div th:text="${product.getName()}"></div>
-        </td>
-        <td>
-            <div th:text="${product.getPrice()}"></div>
-        </td>
-        <td>
-            <div th:text="${product.getCateoryId()}"></div>
-        </td>
-
-
-    </tr>
-    </tbody>
-</table>
-
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
