--- a/src/main/resources/templates/fe/commons/fragment.html
+++ b/src/main/resources/templates/fe/commons/fragment.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+div th:fragment="header">
+<header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+</div>
+
+<div th:fragment="footer">
+    <footer>
+        <p>Footer</p>
+    </footer>
+</div>
+
+<div th:fragment="tagline(content)" style="font-size: 20px; font-weight: bold; color:blueviolet">
+    <p th:text="${content}"></p>
+</div>
+
 </body>
 </html>
