--- a/src/main/resources/templates/fe/home.html
+++ b/src/main/resources/templates/fe/home.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${title}">Title</title>
 </head>
 <body>
+<div class="wrapper">
+    <div th:replace="~{fe/commons/fragment::header}"></div>
+    <div>
+        <h1 th:text="${title}"></h1>
+
+        <div th:replace="~{fe/commons/fragment::tagline('welcome to vietnam')}"></div>
+    </div>
+    <ul th:object="${product}">
+        <li th:text="*{id}"></li>
+        <li th:text="*{name}"></li>
+        <li th:text="*{price}"></li>
+    </ul>
+
+    <ul>
+        <li th:each="language : ${languages}">
+            <span th:text="${language}"></span>
+        </li>
+    </ul>
+
+    <a th:href="@{/products}">Products</a>
+
+    <div th:if="${age > 18}">Bạn đã đủ tuổi</div>
+    <div th:unless="${age > 18}">Bạn chưa đủ tuổi</div>
+
+    <div th:switch="${age}">
+        <div th:case="${12}">Bạn chưa đủ tuổi</div>
+        <div th:case="${18}">Bạn đã đủ tuổi</div>
+    </div>
+</div>
+
+<footer th:replace="~{fe/commons/fragment::footer}">
+</footer>
+</div>
 
 </body>
 </html>
